<resources>
    <string name="Ant1">Ant1</string>
    <string name="Ant2">Ant2</string>
    <string name="Ant3">Ant3</string>
    <string name="Ant4">Ant4</string>
    <string name="EasConfig">Configuración EAS</string>
    <string name="Frequency_hopping_switch">Activar salto de frecuencia</string>
    <string name="Match_content">Contenido de coincidencia</string>
    <string name="Power_on_time">Tiempo de encendido</string>
    <string name="RSSI">Nivel de señal RSSI</string>
    <string name="Series_no">Número de serie</string>
    <string name="Start_address">Dirección de inicio</string>
    <string name="Tag_Count">Contador de etiquetas</string>
    <string name="TotalCount">Total de etiquetas</string>
    <string name="Unchecked_tag">Etiqueta no verificada</string>
    <string name="UpgradeApp">Actualizar app</string>
    <string name="UpgradeBaseband">Actualizar banda base</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_keep_time">Tiempo de acción</string>
    <string name="affirm">Confirmar</string>
    <string name="ant1">ANT1</string>
    <string name="ant10">ANT10</string>
    <string name="ant11">ANT11</string>
    <string name="ant12">ANT12</string>
    <string name="ant13">ANT13</string>
    <string name="ant14">ANT14</string>
    <string name="ant15">ANT15</string>
    <string name="ant16">ANT16</string>
    <string name="ant2">ANT2</string>
    <string name="ant3">ANT3</string>
    <string name="ant4">ANT4</string>
    <string name="ant5">ANT5</string>
    <string name="ant6">ANT6</string>
    <string name="ant7">ANT7</string>
    <string name="ant8">ANT8</string>
    <string name="ant9">ANT9</string>
    <string name="ant_frequency">Frecuencia de antena</string>
    <string name="app_compile">Compilación de la app</string>
    <string name="app_name">ReaderDemo</string>
    <string name="app_version">v0.3.0.0_24_0926</string>
    <string name="app_versions">Versión de la app</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autoIp">IP automática</string>
    <string name="auto_free">Libre automático</string>
    <string name="auto_time">Tiempo automático</string>
    <string name="auto_time_unit">×10ms</string>
    <string name="automatic_calculation">Cálculo automático</string>
    <string name="b">6B</string>
    <string name="bStart">Dir. inicio</string>
    <string name="bTid">TID:</string>
    <string name="bValue">Valor</string>
    <string name="bWrite">Escribir</string>
    <string name="baseSpeed">Velocidad base</string>
    <string name="base_compile">Compilación base</string>
    <string name="base_upgrade">Actualización de banda base</string>
    <string name="base_version">Versión base</string>
    <string name="baud">Baudios</string>
    <string name="beepSet">Configurar pitido</string>
    <string name="beep_switch">Activar pitido</string>
    <string name="being_loading">Cargando...</string>
    <string name="belowIp">IP inferior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bssid">BSSID</string>
    <string name="c">6C</string>
    <string name="cCus">Personalizado C</string>
    <string name="cEpc">EPC:</string>
    <string name="cPass">Contraseña C</string>
    <string name="cStart">Dir. inicio C</string>
    <string name="cTid">TID:</string>
    <string name="cValue">Valor C</string>
    <string name="cWrite">Escribir C</string>
    <string name="calibrationAction">Calibrar</string>
    <string name="calibrationEnd">Fin calibración</string>
    <string name="calibrationParam">Parámetros calibración</string>
    <string name="calibration_power">Calibración de potencia</string>
    <string name="cancel">Cancelar</string>
    <string name="cancelSelectAll">Deseleccionar todo</string>
    <string name="carrierWave">Onda portadora</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="childFrequency">Subfrecuencia</string>
    <string name="chinese">Chino</string>
    <string name="clean">Limpiar</string>
    <string name="cleanSearch">Limpiar búsqueda</string>
    <string name="clearCache">Limpiar caché</string>
    <string name="click_resualt">Pulsar para ver resultado</string>
    <string name="config">Configurar</string>
    <string name="connect">Conectar</string>
    <string name="connect_again">Reconectar</string>
    <string name="connect_fail">Error de conexión</string>
    <string name="connect_success">Conectado</string>
    <string name="connect_type">Tipo de conexión</string>
    <string name="correct_file">Seleccione un fichero válido</string>
    <string name="current_connect">Conexión actual</string>
    <string name="cusCommand">Comando personalizado</string>
    <string name="cusContent">Contenido personalizado</string>
    <string name="cusEpc">EPC:</string>
    <string name="cusPas">Contraseña personalizada</string>
    <string name="cusStart">Inicio personalizado</string>
    <string name="cusTid">TID:</string>
    <string name="cusUser">UserData:</string>
    <string name="cus_6b_start">Inicio 6B</string>
    <string name="cus_command">Comando personalizado</string>
    <string name="cus_filter_start">Inicio filtro</string>
    <string name="cus_gb_start">Inicio GB</string>
    <string name="cus_lock_area">Zona bloqueo</string>
    <string name="cus_readCard">Lectura personalizada</string>
    <string name="cus_read_6b_title">Lectura 6B personalizada</string>
    <string name="cus_read_epc">EPC</string>
    <string name="cus_read_filter_title">Lectura con filtro</string>
    <string name="cus_read_gb_content">Contenido lectura GB</string>
    <string name="cus_read_gb_start">Inicio lectura GB</string>
    <string name="cus_read_gb_title">Lectura GB personalizada</string>
    <string name="cus_read_gjb_title">Lectura GJB personalizada</string>
    <string name="cus_read_other">Otros parámetros</string>
    <string name="cus_read_other_QT">Monza QT Peek</string>
    <string name="cus_read_other_Rfmicron">Parámetros Rfmicron</string>
    <string name="cus_read_other_Sensor">EM Sensor data</string>
    <string name="cus_read_pas">Contraseña lectura</string>
    <string name="cus_read_reserve">Zona reservada</string>
    <string name="cus_read_reserved">Reserved</string>
    <string name="cus_read_tid">TID</string>
    <string name="cus_read_tid_len">Longitud TID</string>
    <string name="cus_read_tid_mode">Modo TID</string>
    <string name="cus_read_title">Lectura personalizada</string>
    <string name="cus_read_userData">UserData</string>
    <string name="cus_read_user_start">Inicio zona usuario</string>
    <string name="cus_tid_hint">Introduzca TID</string>
    <string name="cus_w_area">Zona escritura</string>
    <string name="cus_w_block">Bloque escritura</string>
    <string name="cus_w_blockNum">Número de bloque</string>
    <string name="cus_w_content">Contenido escritura</string>
    <string name="cus_w_start">Inicio escritura</string>
    <string name="cus_write">Escritura personalizada</string>
    <string name="cus_write_gb_pas">Contraseña escritura GB</string>
    <string name="cus_write_gb_start">Inicio escritura GB</string>
    <string name="cus_write_gb_tag_destroy">Destruir etiqueta GB</string>
    <string name="cus_write_gb_tag_lock">Bloquear etiqueta GB</string>
    <string name="cus_write_gb_tag_lock_group">Grupo bloqueo GB</string>
    <string name="cus_write_gb_tag_lock_operation">Operación bloqueo GB</string>
    <string name="cus_write_gb_tag_title">Etiqueta GB</string>
    <string name="cus_write_gb_tag_write">Escribir etiqueta GB</string>
    <string name="cus_write_gb_tag_write_content">Contenido escritura GB</string>
    <string name="epc">EPC</string>
    <string name="filter_read_gb">Filtro lectura GB</string>
    <string name="filter_read_gb_len">Longitud filtro GB</string>
    <string name="filter_read_gb_mode">Modo filtro GB</string>
    <string name="filter_read_gb_tid">TID filtro GB</string>
    <string name="filter_read_gb_user">Usuario filtro GB</string>
    <string name="filter_read_gb_userChild_len">Longitud subusuario</string>
    <string name="filter_read_gb_userChild_pas">Contraseña subusuario</string>
    <string name="filter_read_gb_userChild_start">Inicio subusuario</string>
    <string name="index">index</string>
    <string name="matchingParam">Parámetros de coincidencia</string>
    <string name="no_automatic">Sin cálculo automático</string>
    <string name="reserveData">ReserveData</string>
    <string name="rssi">RSSI</string>
    <string name="tid">TID</string>
    <string name="totalCount">TotalCount</string>
    <string name="type">type</string>
    <string name="userData">UserData</string>
    <string name="wEpc">EPC:</string>
    <string name="wLen">Longitud escritura</string>
    <string name="wPas">Contraseña escritura</string>
    <string name="wTid">TID:</string>
    <string name="wValue">Valor escritura</string>
    <string name="write_epc_empty">EPC no puede estar vacío</string>
    <string name="writegjbEpc">Escribir EPC GJB</string>
</resources>