<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/layout_padding_15" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_26" android:textColor="@color/colorPrimaryDark" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/writegjbEpc" android:textAlignment="center" />
    <View android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wEpc" />
        <EditText android:textSize="@dimen/text_size_20" android:id="@id/w_gjb_epc" android:layout_width="@dimen/layout_width_360" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wTid" />
        <EditText android:textSize="@dimen/text_size_20" android:id="@id/w_gjb_tid" android:layout_width="@dimen/layout_width_360" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wLen" />
        <EditText android:textSize="@dimen/text_size_20" android:id="@id/w_gjb_len" android:layout_width="@dimen/layout_width_300" android:layout_height="wrap_content" android:text="0" android:hint="@string/no_automatic" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wPas" />
        <EditText android:textSize="@dimen/text_size_20" android:id="@id/w_gjb_pas" android:layout_width="@dimen/layout_width_300" android:layout_height="wrap_content" android:hint="00000000" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wValue" android:textAlignment="center" />
    <EditText android:enabled="true" android:gravity="top" android:id="@id/w_gjb_value" android:background="@drawable/text_area" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/write_epc_empty" android:maxLines="5" android:minLines="3" />
</LinearLayout>
